@@ -1,5 +1,7 @@
 2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* flower/include/file-storage.hh: remove file.
+
 	* lily/include/midi-item.hh (class Midi_track): idem.
 
 	* lily/include/source.hh (class Sources): idem.
